fix: accessibility - increase contrast of arrows
* changed behaviour, now only one arrow shows when sorting state
because increasing contrast made it difficult to distinguish between dark gray and black

--- a/src/frontend/scss/grid.scss
+++ b/src/frontend/scss/grid.scss
@@ -81,29 +81,19 @@
     .icon-asc {
       position: absolute;
       font-size: 12px;
-      color: lightgray;
+      color: #474747;
       padding-left: 10px;
       background-color: #f8f8f8;
     }
 
     .icon-desc {
-      position: absolute;
       right: 0px;
       bottom: -2px;
-      font-size: 12px;
-      color: lightgray;
-      padding-left: 10px;
-      background-color: #f8f8f8;
     }
 
     .icon-asc {
-      position: absolute;
       right: 0px;
       top: -1px;
-      font-size: 12px;
-      color: lightgray;
-      padding-left: 10px;
-      background-color: #f8f8f8;
     }
 
     &:hover {
